szurubooru/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: szurubooru-client
  labels:
    app: szurubooru
spec:
  replicas: 1
  selector:
    matchLabels:
      app: szurubooru
      component: client
  template:
    metadata:
      labels:
        app: szurubooru
        component: client
    spec:
      containers:
      - name: server
        image: harbor.jamiechapmanbrn.com/szurubooru/client
        ports:
        - containerPort: 80
          name: service
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: szurubooru-data
