szurubooru/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: szurubooru-server
  labels:
    app: szurubooru
spec:
  replicas: 1
  selector:
    matchLabels:
      app: szurubooru
      component: server
  template:
    metadata:
      labels:
        app: szurubooru
        component: server
    spec:
      containers:
      - name: server
        image: harbor.jamiechapmanbrn.com/szurubooru/server
        ports:
        - containerPort: 6666
          name: service
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /config
          name: config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: szurubooru-data
      - name: config
        nfs:
          path: /mnt/Files/config_dirs/szurubooru
          server: xentor
